<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.example.colourmyviews.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/box_one_text"
            style="@style/Whitebox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{activity::changeBackground}"
            android:text="@string/box_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/box_two_text"
            style="@style/Whitebox"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="@{activity::changeBackground}"
            android:text="@string/box_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box_one_text" />

        <TextView
            android:id="@+id/box_three_text"
            style="@style/Whitebox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{activity::changeBackground}"
            android:text="@string/box_three"
            app:layout_constraintBottom_toTopOf="@+id/box_four_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            app:layout_constraintTop_toTopOf="@+id/box_two_text" />

        <TextView
            android:id="@+id/box_four_text"
            style="@style/Whitebox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{activity::changeBackground}"
            android:text="@string/box_four"
            app:layout_constraintBottom_toTopOf="@+id/box_five_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/box_three_text" />

        <TextView
            android:id="@+id/box_five_text"
            style="@style/Whitebox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{activity::changeBackground}"
            android:text="@string/box_five"
            app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/box_four_text" />

        <TextView
            android:id="@+id/label_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/how_to_play"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/info_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/tap_the_boxes_buttons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_text"
            app:layout_constraintTop_toBottomOf="@+id/box_two_text"
            app:layout_constraintVertical_bias="0.138" />

        <Button
            android:id="@+id/button_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/button_red"
            android:onClick="@{activity::changeBackground}"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_yellow"
            app:layout_constraintEnd_toStartOf="@+id/button_yellow"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/button_yellow"
            android:onClick="@{activity::changeBackground}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_green"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_red"
            app:layout_constraintTop_toBottomOf="@+id/info_text"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/button_green"
            android:onClick="@{activity::changeBackground}"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_yellow" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>