<?xml version="1.0" encoding="utf-8"?>

<!-- Reason for using LinearLayout
    since the layout is vertically set up
    it is no brainer to use LinearLayout vertically.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginFrag"
            type="com.example.shoeinventory.ui.LoginFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.LoginFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/email_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:hint="@string/pass_label"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/loginBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{loginFrag::loginAndGotoWelcomeScreen}"
            android:text="@string/login_btn_text" />

        <Button
            android:id="@+id/createNewBtn"
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{loginFrag::loginAndGotoWelcomeScreen}"
            android:text="@string/create_new_btn_text" />

    </LinearLayout>
</layout>