...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            tools:text="@string/welcome_message" />

        <Button
            android:id="@+id/nextBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/next_btn_text"
            app:layout_constraintEnd_toEndOf="parent"
...
