...
    <string name="next_btn_text">Next</string>

    <string name="cd_welcome_title">Shoe Hub</string>
    <string name="cd_next_btn">Next Button</string>
    <string name="cd_add_shoe_button">Add Shoe Button</string>
    <string name="cd_instruction_desc">Instructions about how to browse the app</string>
    <string name="cd_login">Login</string>

    <string name="instructions_title">Instructions</string>
    <string name="instruction_1">1. Please press the Enter icon below in pink to view the shoe list.</string>
    <string name="instruction_2">2. To add your favourite pair of shoe to the list, click on the FAB on the bottom right hand corner.</string>
    <string name="instruction_3">3. On Add a Shoe screen you can enter the details of the shoe. Please note all fields are mandatory except Description. Press Save to add the shoe to the inventory.</string>
    <string name="instruction_4">4. Once added, the shoe is listed and shown on the Shoe Listing screen.</string>
...
